# artifacts/api-server/src/routes/index.ts
@@ -4,7 +4,7 @@ import questionsRouter from "./questions";
 import answersRouter from "./answers";
 import usersRouter from "./users";
 import breakRouter from "./break";
-import leaderboardRouter from "./leaderboard";
+import shopRouter from "./shop";
 
 const router: IRouter = Router();
 
@@ -13,6 +13,6 @@ router.use(questionsRouter);
 router.use(answersRouter);
 router.use(usersRouter);
 router.use(breakRouter);
-router.use(leaderboardRouter);
+router.use(shopRouter);
 
 export default router;
